Testing query strings

--- a/pilot/analyse.ipynb
+++ b/pilot/analyse.ipynb
@@ -148,7 +148,66 @@
     "## Results:\n",
     "total: 101\n",
     "container + energy: 11,905\n",
-    "energy + microservices: 376 \n"
+    "energy + microservices: 376 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Container + Energy - 11,905\n",
+    "TITLE-ABS-KEY((\"container\" OR \"docker\" OR \"kubernetes\" OR \"containerization\" OR \"containerisation\" OR \"virtualization\" OR \"virtualisation\" OR \"container as a service\" OR \"CaaS\" OR \"virtual machines\")\n",
+    "AND\n",
+    "(\"energy consumption\" OR \"energy efficiency\" OR \"power demand\" OR \"energy management\" OR \"renewable energy sources\" OR \"sustainability\" OR \"sustainable development\" OR \"energy performance\" OR \"software sustainability\") )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Energy + Microservices - 376\n",
+    "TITLE-ABS-KEY((\"microservice\" OR \"micro service\" OR \"micro-service\" OR \"microservices\" OR \"micro-services\")\n",
+    "AND\n",
+    "(\"energy consumption\" OR \"energy efficiency\" OR \"power demand\" OR \"energy management\" OR \"renewable energy sources\" OR \"sustainability\" OR \"sustainable development\" OR \"energy performance\" OR \"software sustainability\") )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Energy + MS OR Container - 11,872\n",
+    "TITLE-ABS-KEY((\"container\" OR \"docker\" OR \"containerization\" OR \"containerisation\" OR \"virtualization\" OR \"virtualisation\" OR \"container as a service\" OR \"CaaS\" OR \"virtual machines\" OR \"microservice\" OR \"micro service\" OR \"micro-service\" OR \"microservices\" OR \"micro-services\") AND (\"energy consumption\" OR \"energy efficiency\" OR \"power demand\" OR \"energy management\" OR \"sustainability\" OR \"sustainable development\" OR \"software sustainability\") )\n",
+    "\n",
+    "\n",
+    "- define a range in terms of years (e.g. MS from book - 2015) - 9,364\n",
+    "- check about green software (when it was first introduced)\n",
+    "- make a trade off of these two dates\n",
+    "- limit to CS, engineering, energy environmental science - 8509\n",
+    "- article + conference paper - 7822\n",
+    "- english - 7626"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(\"Abstract\": \"container\") OR(\"Abstract\":\"docker\") OR(\"Abstract\":\"containerization\") OR(\"Abstract\":\"containerisation\") OR(\"Abstract\":\"virtualization\") OR(\"Abstract\":\"virtualisation\") OR(\"Abstract\":\"container as a service\") OR(\"Abstract\":\"CaaS\") OR(\"Abstract\":\"virtual machines\") OR(\"Abstract\":\"microservice\") OR(\"Abstract\":\"micro service\") OR(\"Abstract\":\"micro-service\") OR(\"Abstract\":\"microservices\") OR(\"Abstract\":\"micro-services\") \n",
+    "\n",
+    "\n",
+    "AND \n",
+    "\n",
+    "(\"Abstract\":\"energy consumption\") OR(\"Abstract\":\"energy efficiency\") OR(\"Abstract\":\"power demand\") OR(\"Abstract\":\"energy management\") OR(\"Abstract\":\"sustainability\") OR(\"Abstract\":\"sustainable development\") OR(\"Abstract\":\"software sustainability\")\n",
+    "\n",
+    "AND (\"Abstract\": \"metrics\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# IEEE Search - Conferences + Journals 2015 - 2015\n",
+    "((\"Abstract\": \"container\") OR(\"Abstract\":\"docker\") OR(\"Abstract\":\"containerisation\")OR(\"Abstract\":\"virtualisation\") OR(\"Abstract\":\"container as a service\") OR(\"Abstract\":\"CaaS\") OR(\"Abstract\":\"virtual machines\") OR(\"Abstract\":\"microservice\") OR(\"Abstract\":\"micro service\") OR(\"Abstract\":\"micro-service\") OR(\"Abstract\":\"microservices\") OR(\"Abstract\":\"micro-services\") AND (\"Abstract\":\"energy consumption\") OR(\"Abstract\":\"energy efficiency\") OR(\"Abstract\":\"power demand\") OR(\"Abstract\":\"energy management\") OR(\"Abstract\":\"sustainability\") OR(\"Abstract\":\"sustainable development\") OR(\"Abstract\":\"software sustainability\") AND (\"Abstract\": \"metrics\"))"
    ]
   }
  ],
