Added asreview dataset & roberta automation script

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -40,10 +40,10 @@
       "ACM 720 (Conferences: 599, Journals: 121)\n",
       "ACM Expanded 806 (Conferences: 685, Journals: 121)\n",
       "IEEE 2107 (Conferences: 1414, Journals: 693)\n",
-      "Scopus: 801 entries\n",
+      "Scopus: 804 entries\n",
       "\n",
-      "Combined: 4998 entries\n",
-      "After deduplication: 3143 entries\n",
+      "Combined: 5001 entries\n",
+      "After deduplication: 3146 entries\n",
       "Number of duplicates removed: 1855\n"
      ]
     }
@@ -58,11 +58,35 @@
     "# Combine all dataframes into one\n",
     "combined_df = pd.concat([df_acm_conferences_expanded,df_acm_conferences_expanded,df_acm_conferences, df_acm_journals, df_ieee_conferences, df_ieee_journals, df_scopus], ignore_index=True)\n",
     "\n",
+    "# combine Columns 'Document Title' and 'Title' into 'Title'\n",
+    "combined_df['Title'] = combined_df['Document Title'].combine_first(combined_df['Title'])\n",
+    "# combine Columns 'Abstract' and 'Abstract Note' into 'Abstract'\n",
+    "combined_df['Abstract'] = combined_df['Abstract'].combine_first(combined_df['Abstract Note'])\n",
+    "\n",
+    "# combine Columns 'Authors' and 'Author' into 'Authors'\n",
+    "combined_df['Author'] = combined_df['Authors'].combine_first(combined_df['Author'])\n",
+    "\n",
+    "# combine Columns 'Item Type', 'Document Type' and 'Document Identifier' into 'Item Type'\n",
+    "combined_df['Item Type'] = combined_df['Item Type'].combine_first(combined_df['Document Type'])\n",
+    "combined_df['Item Type'] = combined_df['Item Type'].combine_first(combined_df['Document Identifier'])\n",
+    "\n",
+    "# combine Columns 'IEEE Terms', 'Index Keywords' and 'Manual Tags' into 'Keywords'\n",
+    "combined_df['Keywords'] = combined_df['IEEE Terms'].combine_first(combined_df['Manual Tags'])\n",
+    "combined_df['Keywords'] = combined_df['Keywords'].combine_first(combined_df['Index Keywords'])\n",
+    "\n",
+    "# combine Columns 'Online Date' and 'Date'\n",
+    "combined_df['Date'] = combined_df['Online Date'].combine_first(combined_df['Date'])\n",
+    "\n",
+    "\n",
+    "# Drop the columns that are not needed\n",
+    "combined_df = combined_df.drop(columns=['Document Title', 'Abstract Note', 'Authors', 'Document Type', 'Document Identifier', 'IEEE Terms', 'Index Keywords', 'Manual Tags', 'Online Date'])\n",
+    "\n",
     "# Get the total number of entries in the combined dataframe\n",
     "print(f\"\\nCombined: {len(combined_df)} entries\")\n",
     "\n",
     "# Remove duplicates based on DOI\n",
     "deduplicated_df = combined_df.drop_duplicates(subset=['DOI'])\n",
+    "\n",
     "\n",
     "# Get the total number of entries after removing duplicates\n",
     "print(f\"After deduplication: {len(deduplicated_df)} entries\")\n",
@@ -71,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
