Restructuring & preparation for snowball + added readme.md

--- a/1-paper-extraction/combine.ipynb
+++ b/1-paper-extraction/combine.ipynb
@@ -11,21 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ieee_conferences_1 = pd.read_csv('data/iteration-6/ieee-conferences-1.csv')\n",
-    "df_ieee_conferences_2 = pd.read_csv('data/iteration-6/ieee-conferences-2.csv')\n",
+    "df_ieee_conferences_1 = pd.read_csv('iteration-6/ieee-conferences-1.csv')\n",
+    "df_ieee_conferences_2 = pd.read_csv('iteration-6/ieee-conferences-2.csv')\n",
     "\n",
     "df_ieee_conferences = pd.concat([df_ieee_conferences_1, df_ieee_conferences_2], ignore_index=True)\n",
-    "df_ieee_journals = pd.read_csv('data/iteration-6/ieee-journals.csv')\n",
+    "df_ieee_journals = pd.read_csv('iteration-6/ieee-journals.csv')\n",
     "\n",
-    "df_acm_conferences_expanded = pd.read_csv('data/iteration-6/acm-conferences-expanded.csv') \n",
-    "df_acm_journals_expanded = pd.read_csv('data/iteration-6/acm-journals-expanded.csv')\n",
-    "df_acm_conferences = pd.read_csv('data/iteration-6/acm-conferences.csv')\n",
-    "df_acm_journals = pd.read_csv('data/iteration-6/acm-journals.csv')\n",
-    "df_scopus = pd.read_csv('data/iteration-6/scopus.csv')"
+    "df_acm_conferences_expanded = pd.read_csv('iteration-6/acm-conferences-expanded.csv') \n",
+    "df_acm_journals_expanded = pd.read_csv('iteration-6/acm-journals-expanded.csv')\n",
+    "df_acm_conferences = pd.read_csv('iteration-6/acm-conferences.csv')\n",
+    "df_acm_journals = pd.read_csv('iteration-6/acm-journals.csv')\n",
+    "df_scopus = pd.read_csv('iteration-6/scopus.csv')"
    ]
   },
   {
@@ -95,12 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export the deduplicated dataframe to a csv file\n",
-    "deduplicated_df.to_csv('data/iteration-6/combined.csv', index=False)"
+    "deduplicated_df.to_csv('iteration-6/combined.csv', index=False)"
    ]
   }
  ],
