Primary screening with AI completed two rounds

--- a/3-snowball/2-preliminary-screening/combine-datasets.ipynb
+++ b/3-snowball/2-preliminary-screening/combine-datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "5fcabe1f",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,12 @@
     "import re\n",
     "\n",
     "# Paths\n",
-    "base_dir = \"rounds\""
+    "base_dir = \"dataset\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "ac400596",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "0cf628a3",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "2db76542",
    "metadata": {},
    "outputs": [
@@ -94,14 +94,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combined dataset saved as rounds/combined_results.csv\n"
+      "Combined dataset saved as rounds/combined_results.csv\n",
+      "Relevant papers dataset saved as rounds/combined_relevant_papers.csv\n"
      ]
     }
    ],
    "source": [
     "output_file = os.path.join(base_dir, \"combined_results.csv\")\n",
     "all_rounds_df.to_csv(output_file, index=False)\n",
-    "print(f\"Combined dataset saved as {output_file}\")"
+    "print(f\"Combined dataset saved as {output_file}\")\n",
+    "\n",
+    "# export a csv of the relevant papers only\n",
+    "relevant_papers_df = all_rounds_df[all_rounds_df[[col for col in all_rounds_df.columns if col.startswith('round_')]].sum(axis=1) > 0]\n",
+    "relevant_output_file = os.path.join(base_dir, \"combined_relevant_papers.csv\")\n",
+    "relevant_papers_df.to_csv(relevant_output_file, index=False)\n",
+    "print(f\"Relevant papers dataset saved as {relevant_output_file}\")"
    ]
   }
  ],
